bad/assign_var_class_bool.example_compiler_output
ERROR
[1mbad/assign_var_class_bool.lat:7:4: [1;31merror: [0;1massigning to `Y` from incompatible type `boolean`[m
	x = true;
	  [1;32m^[m
